--- a/.github/workflows/testing_pipeline.yml
+++ b/.github/workflows/testing_pipeline.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Run JMeter Load Test
         uses: QAInsights/PerfAction@v5.6.2
         with:
-          test-plan-path: './raqeeb test plan.jmx' 
+          test-plan-path: './raqeeb_test_plan.jmx' 
           args: "-e -o ./reports/"
       - name: Upload JMeter Dashboard
         uses: actions/upload-artifact@v4
