--- a/.github/workflows/functional_audits.yml
+++ b/.github/workflows/functional_audits.yml
@@ -14,11 +14,8 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest flask flask-cors statistics
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
       - name: Run Pytest
         run: |
