--- a/.github/workflows/non_functional_audits.yml
+++ b/.github/workflows/non_functional_audits.yml
@@ -78,11 +78,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run JMeter Test
-        uses: rbhadti94/apache-jmeter-action@v0.5.0
+      - name: Run JMeter Load Test
+        uses: QAInsights/PerfAction@v5.6.2
         with:
-          testFilePath: raqeeb_test_plan.jmx
-          command: "-n -t raqeeb_test_plan.jmx -l results.jtl -Jduration=30 -X"
+          test-plan-path: './raqeeb_test_plan.jmx' 
+          args: "-e -o ./reports/ -Jduration=30 -X"
 
       - name: Upload Results
         uses: actions/upload-artifact@v4
