--- a/.github/workflows/functional_audits.yml
+++ b/.github/workflows/functional_audits.yml
@@ -30,8 +30,7 @@ jobs:
 
   api_audit:
     name: Postman API Audit
-    runs-on: ubuntu-latest # Changed from self-hosted to ensure a clean environment
-    needs: logic_audit 
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -41,21 +40,30 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install Newman & Server Deps
+      - name: Install Dependencies
         run: |
           npm install -g newman
           pip install -r requirements.txt
 
       - name: Start Server in Background
-        # 'nohup' prevents the server from closing when the shell step finishes
+        # Starts your flask/fastapi server and logs output for debugging
         run: nohup python server.py > server.log 2>&1 & 
         
-      - name: Wait for Server Health Check
-        # This loops until localhost:5000 (or your port) returns a 200 OK
+      - name: Wait for Server (Health Check)
+        # This prevents Newman from starting until the server actually responds on port 5000
         run: |
           timeout 30s bash -c 'until curl -s localhost:5000; do echo "Waiting for server..."; sleep 2; done'
-          echo "Server is UP!"
+          echo "Server is UP and running!"
 
       - name: Run Postman Collection
-        # Added --bail to stop on first failure for cleaner debugging
-        run: newman run ./raqeeb_collection.json --bail
+        # --env-var "base_url=..." replaces your local IP with localhost dynamically
+        # --timeout-request 5000 ensures TC07 fails in 5 seconds rather than 4 minutes if offline
+        run: |
+          newman run "./raqeeb_collection.json" \
+          --env-var "base_url=http://localhost:5000" \
+          --timeout-request 5000 \
+          --bail
+          
+      - name: Debug Server on Failure
+        if: failure()
+        run: cat server.log
